--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 <body>
   <button id="themeButton" class="theme-toggle">🌙 Thème sombre</button>
 
-  <h1><em>Cours 1 - Découverte des réseaux.pdf</em></h1>
+  <h1><b>Cours 1 - Découverte des réseaux</b></h1>
   <h2><span class="title">Définitions et Concepts de Base des Réseaux</span></h2>
 
   <!-- Réseau -->
