--- a/index.html
+++ b/index.html
@@ -101,9 +101,8 @@
   A. La réunion de fin<br>
   B. La réunion de lancement officielle<br>
   C. Un test technique<br>
-  D. Un audit
-  </p>
-
+  D. Un audit</p>
+<br>
   <div class="details-wrap">
     <details class="correction">
       <summary>
@@ -128,7 +127,7 @@
   B. La construction / mise en place<br>
   C. La facturation<br>
   D. Le recrutement</p>
-
+<br>
   <div class="details-wrap">
     <details class="correction">
       <summary>
@@ -152,9 +151,8 @@
   A. L’exploitation / maintenance<br>
   B. La planification<br>
   C. La formation<br>
-  D. L’avant-projet
-  </p>
-
+  D. L’avant-projet</p>
+<br>
   <div class="details-wrap">
     <details class="correction">
       <summary>
@@ -178,9 +176,8 @@
   A. Comment coder<br>
   B. Ce que le système doit faire<br>
   C. Les performances<br>
-  D. Le design<br>
-  </p>
-
+  D. Le design</p>
+<br>
   <div class="details-wrap">
     <details class="correction">
       <summary>
@@ -204,9 +201,8 @@
   A. Des performances ou la sécurité<br>
   B. Des besoins utilisateurs<br>
   C. Des éléments graphiques<br>
-  D. Le planning<br>
-  </p>
-
+  D. Le planning</p>
+<br>
   <div class="details-wrap">
     <details class="correction">
       <summary>
@@ -231,7 +227,7 @@
   B. Comment on satisfait l’exigence<br>
   C. Le budget<br>
   D. Le planning</p>
-
+<br>
   <div class="details-wrap">
     <details class="correction">
       <summary>
@@ -256,7 +252,7 @@
   B. Spécifique, Mesurable, Atteignable, Réaliste, Temporel<br>
   C. Stratégique, Modéré…<br>
   D. Standard…</p>
-
+<br>
   <div class="details-wrap">
     <details class="correction">
       <summary>
@@ -281,9 +277,8 @@
   A. Gérer les incidents<br>
   B. Visualiser tâches, durées, dépendances<br>
   C. Gérer les salaires<br>
-  D. Surveiller l’énergie
-  </p>
-
+  D. Surveiller l’énergie</p>
+<br>
   <div class="details-wrap">
     <details class="correction">
       <summary>
@@ -308,7 +303,7 @@
   B. Unique<br>
   C. Facultatif<br>
   D. Toujours l’IT</p>
-
+<br>
   <div class="details-wrap">
     <details class="correction">
       <summary>
@@ -333,7 +328,7 @@
   B. Celui qui valide et porte le projet<br>
   C. Celui qui code<br>
   D. Celui qui gère les logs</p>
-
+<br>
   <div class="details-wrap">
     <details class="correction">
       <summary>
@@ -357,9 +352,8 @@
   A. Un projet secret<br>
   B. Un projet arrêté qui renaît<br>
   C. Un projet rapide<br>
-  D. Un projet marketing
-  </p>
-
+  D. Un projet marketing</p>
+<br>
   <div class="details-wrap">
     <details class="correction">
       <summary>
@@ -392,7 +386,7 @@
   B. D’éviter les vulnérabilités tardives<br>
   C. De supprimer la planification<br>
   D. De réduire le rôle du sponsor</p>
-
+<br>
   <div class="details-wrap">
     <details class="correction">
       <summary>
@@ -417,7 +411,7 @@
   B. Page rapide<br>
   C. Authentification à deux facteurs (2FA)<br>
   D. Page centrée</p>
-
+<br>
   <div class="details-wrap">
     <details class="correction">
       <summary>
@@ -442,7 +436,7 @@
   B. Les données personnelles<br>
   C. Le budget<br>
   D. La méthode Agile</p>
-
+<br>
   <div class="details-wrap">
     <details class="correction">
       <summary>
@@ -467,7 +461,7 @@
   B. Les risques et la stratégie sécurité<br>
   C. Les RH<br>
   D. Le design</p>
-
+<br>
   <div class="details-wrap">
     <details class="correction">
       <summary>
@@ -492,7 +486,7 @@
   B. Intégrer Sécurité + Dev + Ops<br>
   C. Tester à la fin<br>
   D. Travailler sans sécurité</p>
-
+<br>
   <div class="details-wrap">
     <details class="correction">
       <summary>
@@ -517,7 +511,7 @@
   B. Clarifier qui fait quoi en cas d’attaque<br>
   C. Remplacer le RSSI<br>
   D. Éviter les audits</p>
-
+<br>
   <div class="details-wrap">
     <details class="correction">
       <summary>
@@ -551,7 +545,7 @@
   B. Réduire l’empreinte écologique du numérique<br>
   C. Ajouter du vert dans les interfaces<br>
   D. Supprimer le cloud</p>
-
+<br>
   <div class="details-wrap">
     <details class="correction">
       <summary>
@@ -576,9 +570,8 @@
   A. Une simple alerte<br>
   B. Une menace globale exigeant des mesures rapides<br>
   C. Une baisse automatique des émissions<br>
-  D. Une obligation à la 5G
-  </p>
-
+  D. Une obligation à la 5G</p>
+<br>
   <div class="details-wrap">
     <details class="correction">
       <summary>
@@ -603,9 +596,8 @@
   A. Des produits verts<br>
   B. Analyse causes, conséquences et recommande<br>
   C. Fixe les prix du pétrole<br>
-  D. Surveille Internet
-  </p>
-
+  D. Surveille Internet</p>
+<br>
   <div class="details-wrap">
     <details class="correction">
       <summary>
@@ -630,9 +622,8 @@
   A. Le chiffre d’affaires<br>
   B. Les ressources nécessaires pour soutenir notre mode de vie<br>
   C. Le temps écran<br>
-  D. Le poids du cloud
-  </p>
-
+  D. Le poids du cloud</p>
+<br>
   <div class="details-wrap">
     <details class="correction">
       <summary>
@@ -657,9 +648,8 @@
   A. Interdire les smartphones<br>
   B. Réduire les usages et supprimer le superflu<br>
   C. Passer en mode avion<br>
-  D. Utiliser uniquement le Wi-Fi
-  </p>
-
+  D. Utiliser uniquement le Wi-Fi</p>
+<br>
   <div class="details-wrap">
     <details class="correction">
       <summary>
@@ -685,7 +675,7 @@
   B. Refuser, Réduire, Réparer, Réutiliser, Recycler<br>
   C. Réactiver, Rebooter…<br>
   D. Recharger, Réduire…</p>
-
+<br>
   <div class="details-wrap">
     <details class="correction">
       <summary>
@@ -712,7 +702,7 @@
   B. 5%<br>
   C. 10%<br>
   D. 50%</p>
-
+<br>
   <div class="details-wrap">
     <details class="correction">
       <summary>
@@ -738,7 +728,7 @@
   B. Multiplication des équipements + explosion des données<br>
   C. Baisse de la fibre<br>
   D. Moins de 5G</p>
-
+<br>
   <div class="details-wrap">
     <details class="correction">
       <summary>
@@ -764,7 +754,7 @@
   B. L’impact écologique sur tout le cycle de vie<br>
   C. Le trafic Internet<br>
   D. Les performances CPU</p>
-
+<br>
   <div class="details-wrap">
     <details class="correction">
       <summary>
@@ -791,7 +781,7 @@
   B. Le numérique au service de l’écologie<br>
   C. Ajouter du vert dans les sites web<br>
   D. Débrancher les serveurs</p>
-
+<br>
   <div class="details-wrap">
     <details class="correction">
       <summary>
