--- a/index.html
+++ b/index.html
@@ -2,20 +2,20 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>Révisions B1 – Modules</title>
+    <title>Révisions B1</title>
     <link rel="stylesheet" href="style-home.css">
 </head>
 
 <body>
 
-    <h1>Révisions – B1 Cybersécurité</h1>
-    <p class="subtitle">Choisis un module pour commencer</p>
+    <h1>Révisions B1</h1>
+    <p class="subtitle">Modules :</p>
 
     <div class="cards-container">
 
         <a href="Gestion-de-Projet.html" class="glass-card">
             <h2>Gestion de Projet</h2>
-            <p>30 QCM + corrections</p>
+            <p>QCM à 30 questions</p>
         </a>
 
         <a href="Réseaux1.html" class="glass-card">
